src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --brand-primary: oklch(0.4662 0.1341 267.6);
  --brand-secondary: oklch(0.3012 0.1062 280.8);
  --brand-tertiary: oklch(0.3347 0.0889 267.14);
  --brand-accent-1: oklch(0.5672 0.1111 267.72);
  --brand-accent-2: oklch(0.2513 0.0987 280.61);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-brand-primary: var(--brand-primary);
  --color-brand-secondary: var(--brand-secondary);
  --color-brand-tertiary: var(--brand-tertiary);
  --color-brand-accent-1: var(--brand-accent-1);
  --color-brand-accent-2: var(--brand-accent-2);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

.dark {
  --background: #0a0a0a;
  --foreground: #ededed;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

